# SymptomSync

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  test.py
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
config/: database_config.py
docs/: requirements.md
docs/Design Docs/: HLD.md
docs/Design Docs/Class Diagrams/: base-class-diagram.uml
models/: query_result.py
repository/: connection.py  connection_pool.py  transaction.py
scripts/: database_schema_v1.sql  populate_tables_for_testing.sql
services/: db_service.py
src/: main.py  pytest.ini
src/api/: health_api.py  pyproject.toml  requirements.in  requirements.txt  whatsapp_webhook_api.py
src/api/clients/: postgres_sql_client.py  redis_client.py  telegram_client.py  whatsapp_client.py
src/api/clients/tests/: test_whatsapp_client_unit.py
src/api/models/: IO_model.py  __init__.py  appointment_model.py  chat_session_model.py  doctor_model.py  patient_model.py  telegram_model.py
src/api/prompts/: patient_intake_prompt.txt
src/api/services/: __init__.py  agent_service.py  appointment_service.py  chat_history_service.py  doctor_service.py  function_tool_service.py  patient_report_service.py  patient_service.py
src/tests/: README.md  pytest.ini
src/tests/api/clients/: conftest_integration.py  test_postgres_integration.py  test_redis_client.py  test_whatsapp_client_integration.py
src/tests/api/services/: __init__.py  conftest.py  test_appointment_service.py  test_chat_history_service.py  test_doctor_service.py  test_patient_service.py
tests/: pytest.ini
tests/api/clients/: conftest_integration.py  test_postgres_integration.py  test_redis_client.py  test_redis_client_integration.py  test_whatsapp_client_integration.py  test_whatsapp_client_unit.py
tests/api/services/: conftest.py  test_appointment_service.py  test_chat_history_service.py  test_doctor_service.py  test_patient_service.py
