[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symptom-sync-api"
version = "0.1.0"
description = "SymptomSync API - WhatsApp integration and chat services"
requires-python = ">=3.10"
dependencies = [
    "redis",
    "pydantic",
    "backoff",
    "httpx",
    "httpx[http2]",
    "requests",
    "types-requests",
    "psycopg2",
    "openai-agents",
    "openai-agents[litellm]",
    "pydantic[email]",
    "fastapi",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
